Corrections of rent from and rent to use cases to contain requests better, also added back emails to user

--- a/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
@@ -65,7 +65,7 @@
         \label{Ύπαρξη βιβλίου}
     \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
-    \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να κάνει αίτηση ενοικίασης του βιβλίου στον χρήστη αυτόν.
+    \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να δηλώσει προσφορά ενοικίασης του βιβλίου στον χρήστη αυτόν.
     \item Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη".
 \end{enumerate}
 
@@ -90,8 +90,8 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης που ζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.4.] Ο χρήστης επιλέγει ένα από τα βιβλία.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει αποδοχή της αίτησης.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου από άλλο χρήστη" (από τη μεριά του ιδιοκτήτη).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει προσφορά εκπλήρωσης της αίτησης.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης μεταφέρεται στο use case "Ενοικίαση βιβλίου σε άλλο χρήστη" (από τη μεριά του ιδιοκτήτη).
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης με δια ζώσης συναλλαγή - Αυτή δεν υπάρχει:}
@@ -125,11 +125,11 @@
 \label{Rental Use Case}
 \subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου από άλλο χρήστη>>:}
 \begin{enumerate}
-    \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε.
+    \item Ο ενοικιαστής κάνει προσφορά ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε.
         \label{Επιλογή τρόπου συναλλαγής}
     \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
         \label{Έλεγχος ποσού ασφαλείας}
-    \item Το σύστημα επιβεβαιώνει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη.
+    \item Το σύστημα επιβεβαιώνει ότι η προσφορά ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη.
         \label{Αποδοχή ή απόρριψη συναλλαγής}
     \item Το σύστημα εμφανίζει στοιχεία επικοινωνίας του ιδιοκτήτη στον ενοικιαστή και αντίστροφα.
     \item Ο ενοικιαστής, αφού βρεθεί με τον ιδιοκτήτη δια ζώσης και παραλάβει το βιβλίο ή το βιβλίο φτάσει σε αυτόν μέσω ταχυδρομείου, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου. Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα.
@@ -144,20 +144,26 @@
         \label{Τέλος ενοικίασης}
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Ο ενοικιαστής δεν έχει αρκετό υπόλοιπο για να καλύψει το "ποσό ασφαλείας":}
+\subsubsection*{Εναλλακτική Ροή 1: Ο ενοικιαστής αποδέχεται μια προσφορά εκπλήρωσης αίτησης:}
 \begin{enumerate}
-    \item[\ref{Έλεγχος ποσού ασφαλείας}.1.] Το σύστημα παρατηρεί ότι ο ενοικιαστής δεν έχει αρκετό χρηματικό ποσό στο λογαριασμό για να καλύψει το "ποσό ασφαλείας".
-    \item[\ref{Έλεγχος ποσού ασφαλείας}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι δεν έχει αρκετά χρήματα στον λογαριασμό του και να προσθέσει αν θέλει να κάνει την αίτηση ενοικίασης.
+    \item[1.1.] Ο ενοικιαστής αποδέχεται μια προσφορά εκπλήρωσης αίτησης που του έκανε άλλος χρήστης.
+    \item[1.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 4 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\subsubsection*{Εναλλακτική Ροή 2: Ο ενοικιαστής δεν έχει αρκετό υπόλοιπο για να καλύψει το "ποσό ασφαλείας":}
 \begin{enumerate}
-    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.1.] Το σύστημα παρατηρεί ότι η αίτηση ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
+    \item[\ref{Έλεγχος ποσού ασφαλείας}.1.] Το σύστημα παρατηρεί ότι ο ενοικιαστής δεν έχει αρκετό χρηματικό ποσό στο λογαριασμό για να καλύψει το "ποσό ασφαλείας".
+    \item[\ref{Έλεγχος ποσού ασφαλείας}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι δεν έχει αρκετά χρήματα στον λογαριασμό του και να προσθέσει αν θέλει να κάνει την προσφορά ενοικίασης.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 3: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\begin{enumerate}
+    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.1.] Το σύστημα παρατηρεί ότι η προσφορά ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
     \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι η αίτησή του απορρίφθηκε από τον ιδιοκτήτη.
     \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
 \begin{enumerate}
     \item[\ref{Δεν ενημερώνεται η κατοχή}.α.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή.
     \item[\ref{Δεν ενημερώνεται η κατοχή}.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
@@ -165,7 +171,7 @@
     \item[\ref{Δεν ενημερώνεται η κατοχή}.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος dispute resolved - Τέλος χρημάτων} της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
+\subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
     \item[\ref{Δεν ενημερώνεται η κατοχή}.β.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ιδιοκτήτη και όχι από τον ενοικιαστή.
     \item[\ref{Δεν ενημερώνεται η κατοχή}.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
@@ -173,7 +179,7 @@
     \item[\ref{Δεν ενημερώνεται η κατοχή}.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 6: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
 \begin{enumerate}
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
@@ -181,7 +187,7 @@
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Τέλος ενοικίασης}.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 6: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση από υποστήριξη πελατών:}
+\subsubsection*{Εναλλακτική Ροή 7: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ιδιοκτήτη και όχι από τον ενοικιαστή, ή αντίστροφα.
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
@@ -189,7 +195,7 @@
     \item[\ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 7: Τέλος χρημάτων ενοικιαστή - Μετέπειτα προσθήκη απαραίτητου ποσού:}
+\subsubsection*{Εναλλακτική Ροή 8: Τέλος χρημάτων ενοικιαστή - Μετέπειτα προσθήκη απαραίτητου ποσού:}
 \begin{enumerate}
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.α.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.α.2.] Το σύστημα ζητάει από τον ενοικιαστή να προσθέσει παραπάνω χρήματα στον λογαριασμό του.
@@ -198,7 +204,7 @@
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.α.5.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν} της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 8: Τέλος χρημάτων ενοικιαστή - Δεν προστίθεται το απαραίτητο ποσό:}
+\subsubsection*{Εναλλακτική Ροή 9: Τέλος χρημάτων ενοικιαστή - Δεν προστίθεται το απαραίτητο ποσό:}
 \begin{enumerate}
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.β.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.β.2.] Το σύστημα ζητάει από τον ενοικιαστή να προσθέσει παραπάνω χρήματα στον λογαριασμό του.
@@ -209,8 +215,8 @@
 \subsection{Ενοικίαση βιβλίου σε άλλο χρήστη (μεριά ιδιοκτήτη)}
 \subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου σε άλλο χρήστη (μεριά ιδιοκτήτη)>>:}
 \begin{enumerate}
-    \item Ο ιδιοκτήτης αποδέχεται την αίτηση ενοικίασης βιβλίου που του έκανε ένας άλλος χρήστης.
-    \item Το σύστημα καταγράφει ότι η αίτηση ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη. 
+    \item Ο ιδιοκτήτης αποδέχεται την προσφορά ενοικίασης βιβλίου που του έκανε ένας άλλος χρήστης.
+    \item Το σύστημα καταγράφει ότι η προσφορά ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη. 
     \item Το σύστημα αφαιρεί ένα από το διαθέσιμο υπόλοιπο για το συγκεκριμένου βιβλίου που προφέρει ο ιδιοκτήτης προς ενοικίαση (επειδή μπορεί ο ιδιοκτήτης να έχει πολλά αντίγραφα από το ίδιο βιβλίο που προσφέρει για ενοικίαση). Το διαθέσιμο υπόλοιπο μετά την αφαίρεση είναι μεγαλύτερο του μηδέν.
     \item Το σύστημα εμφανίζει στοιχεία επικοινωνίας του ιδιοκτήτη στον ενοικιαστή και αντίστροφα.
     \item Ο ιδιοκτήτης βρίσκεται με τον ενοικιαστή δια ζώσης και του δίνει το βιβλίο, ή στέλνει το βιβλίο ταχυδρομικώς (ανάλογα τον τύπο συναλλαγής που επιλέχθηκε) και ενημερώνει τη πλατφόρμα (δήλωση αλλαγής κατοχής) όταν ο ενοικιαστής πλέον έχει το βιβλίο (αφού του το δώσει ή αφού φτάσει σύμφωνα με το tracking number του ταχυδρομείου αντίστοιχα).
@@ -221,21 +227,29 @@
     \item Το σύστημα σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας". Επίσης καταγράφει την λήξη της συναλλαγής και την αποθηκεύει στο ιστορικό συναλλαγών των δύο χρηστών.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\subsubsection*{Εναλλακτική Ροή 1: Ο ιδιοκτήτης κάνει προσφορά εκπλήρωσης αίτησης ενός άλλου χρήστη:}
 \begin{enumerate}
-    \item[1.1.] Ο ιδιοκτήτης απορρίπτει την αίτηση ενοικίασης βιβλίου που του έκανε ένας άλλος χρήστης.
-    \item[1.2.] Το σύστημα παρατηρεί ότι η αίτηση ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
-    \item[1.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
+    \item[1.α.1.] Ο ιδιοκτήτης κάνει προσφορά εκπλήρωσης αίτησης στον ενοικιαστή που επέλεξε για την αίτηση που αναζήτησε.
+    \item[1.α.2.] Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
+    \item[1.α.3.] Το σύστημα επιβεβαιώνει ότι η προσφορά εκπλήρωσης αίτησης έχει γίνει αποδεκτή από τον ενοικιαστή.
+    \item[1.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 4 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 2: Το διαθέσιμο υπόλοιπο καταλήγει να είναι μηδέν:}
+\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\begin{enumerate}
+    \item[1.β.1.] Ο ιδιοκτήτης απορρίπτει την προσφορά ενοικίασης βιβλίου που του έκανε ένας άλλος χρήστης.
+    \item[1.β.2.] Το σύστημα παρατηρεί ότι η προσφορά ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
+    \item[1.β.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 3: Το διαθέσιμο υπόλοιπο καταλήγει να είναι μηδέν:}
 \begin{enumerate}
     \item[3.1.] Το σύστημα αφαιρεί ένα από το διαθέσιμο υπόλοιπο για το συγκεκριμένου βιβλίου που προφέρει ο ιδιοκτήτης προς ενοικίαση (επειδή μπορεί ο ιδιοκτήτης να έχει πολλά αντίγραφα από το ίδιο βιβλίο που προσφέρει για ενοικίαση). Το διαθέσιμο υπόλοιπο μετά την αφαίρεση είναι ίσο με μηδέν.
     \item[3.2.] Το σύστημα δεν δείχνει το βιβλίο ως διαθέσιμο πλέον από τον συγκεκριμένο ιδιοκτήτη και δεν μπορούν να γίνουν νέες αιτήσεις ενοικιάσεως.
     \item[3.3.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 4 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση προβλήματος:}
 \begin{enumerate}
     \item[6.α.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ενοικιαστή και όχι από τον ιδιοκτήτη.
     \item[6.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
@@ -243,7 +257,7 @@
     \item[6.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 7 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 4: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
+\subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση κατοχής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
     \item[6.β.1.] Το σύστημα λαμβάνει ενημέρωση αλλαγής κατοχής από τον ενοικιαστή και όχι από τον ιδιοκτήτη.
     \item[6.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
@@ -251,7 +265,7 @@
     \item[6.β.4.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν με την υποστήριξη πελατών.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 5: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
+\subsubsection*{Εναλλακτική Ροή 6: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση προβλήματος:}
 \begin{enumerate}
     \item[9.α.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ενοικιαστή και όχι από τον ιδιοκτήτη του βιβλίου.
     \item[9.α.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους και αν δεν λυθεί το θέμα να επικοινωνήσουν με την υποστήριξη πελατών.
@@ -259,15 +273,15 @@
     \item[9.α.4.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 10.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 6: Ο χρήστης απορρίπτει την αίτηση ενοικίασης του άλλου χρήστη:}
+\subsubsection*{Εναλλακτική ροή 7: Ο χρήστης απορρίπτει την προσφορά ενοικίασης του άλλου χρήστη:}
 \begin{enumerate}
-    \item [6.1] Ο χρήστης απορρίπτει την αίτηση.
-    \item [6.2] Το σύστημα ανανεώνει το status της αίτησης ως "Απόρριψη από ιδιοκτήτη" και την μεταφέρει στα ιστορικά των δύο χρηστών.
+    \item [6.1] Ο χρήστης απορρίπτει την προσφορά.
+    \item [6.2] Το σύστημα ανανεώνει το status της προσφοράς ως "Απόρριψη από ιδιοκτήτη" και την μεταφέρει στα ιστορικά των δύο χρηστών.
     \item [6.3] Το σύστημα ενημερώνει τον χρήστη ότι η απόρριψη καταγράφτηκε.
 \end{enumerate}
 
 
-\subsubsection*{Εναλλακτική Ροή 7: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση από υποστήριξη πελατών:}
+\subsubsection*{Εναλλακτική Ροή 8: Δεν ενημερώνεται και από τους δύο η κατάσταση επιστροφής - Επίλυση από υποστήριξη πελατών:}
 \begin{enumerate}
     \item[9.β.1.] Το σύστημα λαμβάνει ενημέρωση επιστροφής από τον ενοικιαστή και όχι από τον ιδιοκτήτη του βιβλίου.
     \item[9.β.2.] Το σύστημα ενημερώνει και τα δύο μέλη να επικοινωνήσουν μεταξύ τους.
@@ -457,7 +471,7 @@
     \item Ο χρήστης επιλέγει να κάνει επεξεργασία των στοιχείων του και εισάγει νέα στοιχεία για αυτά που θέλει να αλλάξει (εκτός του password και της εικόνας χρήστη που αναλύονται σε εναλλακτική ροή και του email που δεν μπορεί να αλλάξει). 
     \item Το σύστημα ελέγχει αν τα στοιχεία έχουν τη σωστή μορφοποίηση, δηλαδή το username να έχει εύρος από 8-20 χαρακτήρες και δεν το έχει ήδη άλλος χρήστης, η περιγραφή μέχρι 150 χαρακτήρες, η τοποθεσία να είναι πραγματική και να υπάρχει στο χάρτη και το κινητό να είναι δεκαψήφιος αριθμός και βλέπει ότι οι κανόνες τηρούνται.
     \item Το σύστημα καταγράφει τις αλλαγές.
-    \item Το σύστημα ενημερώνει τον χρήστη ότι έχουν ανανεωθεί τα στοιχεία του.
+    \item Το σύστημα ενημερώνει τον χρήστη ότι έχουν ανανεωθεί τα στοιχεία του με μήνυμα και με email.
     \item Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του, όπου μπορεί να δει το ανανεωμένο προφίλ του.
 \end{enumerate}
 
@@ -540,7 +554,7 @@
     \item Ο χρήστης εισάγει τα στοιχεία της κάρτας του και το ποσό.
     \item Το σύστημα ελέγχει αν τα στοιχεία της κάρτας (δηλαδή ότι ο αριθμός αποτελείται από δεκαέξι ψηφία, το όνομα έχει κατάλληλη μορφοποίηση, το CVV είναι τριών ψηφίων και η ημερομηνία λήξης είναι έγκυρη) και βλέπει ότι είναι έγκυρα.
     \item H πληρωμή κατοχυρώνεται από το σύστημα και το υπόλοιπο του χρήστη ανανεώνεται με βάση το ποσό.
-    \item Το σύστημα ενημερώνει το χρήστη για την επιτυχή ανανέωση του υπολοίπου.
+    \item Το σύστημα ενημερώνει το χρήστη για την επιτυχή ανανέωση του υπολοίπου με μήνυμα και με email.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Τα στοιχεία της κάρτας δεν είναι έγκυρα:}
@@ -557,7 +571,7 @@
     \item [3.α.4.] Το σύστημα ελέγχει αν τα στοιχεία της κάρτας (δηλαδή ότι ο αριθμός αποτελείται από δεκαέξι ψηφία, το όνομα έχει κατάλληλη μορφοποίηση, το CVV είναι τριών ψηφίων και η ημερομηνία λήξης είναι έγκυρη) και βλέπει ότι είναι έγκυρα.
     \item [3.α.5.] Το σύστημα ελέγχει αν το ποσό που εισήγαγε υπερβαίνει το υπόλοιπό του και βλέπει ότι αυτό δεν ισχύει. 
     \item [3.α.6.] Η επιστροφή κατοχυρώνεται και αφαιρείται το ποσό από τον λογαριασμό του χρήστη.
-    \item [3.α.7.] Το σύστημα ενημερώνει τον χρήστη ότι η μεταφορά έγινε με επιτυχία.
+    \item [3.α.7.] Το σύστημα ενημερώνει τον χρήστη ότι η μεταφορά έγινε με επιτυχία με μήνυμα και με email.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 3: Ο χρήστης δεν έχει το ποσό στο λογαριασμό του που θέλει να αφαιρέσει:}
