Added Niko's and Peri's Work

--- a/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
@@ -462,7 +462,7 @@
     \item [7.2.] Εμφανίζεται μήνυμα ακύρωσης αξιολόγησης.
 \end{enumerate}
 
-\subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη:}
+\subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
 
 \subsubsection*{Βασική ροή <<Προβολής και επεξεργασίας στοιχείων λογαριασμού \\χρήστη>>:}
 \begin{enumerate}
@@ -618,7 +618,7 @@
     \item [8.2.] Το σύστημα μεταβιβάζει τον χρήστη αυτόματα στην σελίδα που αυτός μπορεί να εκπληρώσει την αίτηση αυτή.
 \end{enumerate}
 
-\subsection{Προβολή ιστορικού συναλλαγών και στατιστικών:}
+\subsection{Προβολή ιστορικού συναλλαγών και στατιστικών}
 
 \subsubsection*{Βασική ροή <<Προβολή ιστορικού συναλλαγών και στατιστικών>>:}
 \begin{enumerate}
