--- a/3ο Παραδοτέο/Robustness-Diagrams/Files/Robustness-diagrams-v0.1.tex
+++ b/3ο Παραδοτέο/Robustness-Diagrams/Files/Robustness-diagrams-v0.1.tex
@@ -60,4 +60,39 @@
 	\label{Robustness Diagram: Ενοικίαση βιβλίου σε άλλο χρήστη μεριά ιδιοκτήτη}
 \end{figure}
 
+\subsection{Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{Manage User Book Listings Robustness.png}
+	\caption{Robustness Diagram: Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
+	\label{Robustness Diagram: Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
+\end{figure}
+
+\subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{View and Edit User Account Details Robustness.png}
+	\caption{Robustness Diagram: Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
+	\label{Robustness Diagram: Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
+\end{figure}
+
+\subsection{Επεξεργασία χρηματικού υπολοίπου χρήστη}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{View and Edit User Account Details Robustness.png}
+	\caption{Robustness Diagram: Επεξεργασία χρηματικού υπολοίπου χρήστη}
+	\label{Robustness Diagram: Επεξεργασία χρηματικού υπολοίπου χρήστη}
+\end{figure}
+
+\subsection{Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{Favorite Users and Notification System Robustness.png}
+	\caption{Robustness Diagram: Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων}
+	\label{Robustness Diagram: Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων}
+\end{figure}
+
+\subsection{Προβολή ιστορικού συναλλαγών και στατιστικών}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{History and Statistics Robustness.png}
+	\caption{Robustness Diagram: Προβολή ιστορικού συναλλαγών και στατιστικών}
+	\label{Robustness Diagram: Προβολή ιστορικού συναλλαγών και στατιστικών}
+\end{figure}
+
 \end{document}
