Added new use cases from Xristos and corrected duplicate robustness

--- a/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
@@ -356,110 +356,69 @@
 
 \subsubsection*{Βασική ροή <<Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης>>: Προσθήκη νέου αιτήματος:}
 \begin{enumerate}
-    \item Ο χρήστης επιλέγει να δει τη λίστα με τα αιτήματά του.
-    \item Στον χρήστη εμφανίζεται η οθόνη με τα ήδη υπάρχοντα αιτήματά του μαζί με στοιχεία του καθενός από αυτά.
-    \item Ο χρήστης πατάει την επιλογή προσθήκης καινούριου αιτήματος.
-    \item Ο χρήστης εισάγει τα στοιχεία του βιβλίου τα οποία θέλει να αποκτήσει, προσθέτοντας την τιμή που προτίθεται να πληρώσει.
-    \item Το σύστημα αναζητά αν αυτό το βιβλίο υπάρχει ήδη διαθέσιμο από κάποιον άλλο χρήστη που το προσφέρει ήδη στην πλατφόρμα.
-    \item Το σύστημα προχωράει στην καταχώρηση του αιτήματος.
-    \item Εμφανίζεται μήνυμα που γράφει “Επιτυχής καταχώρηση αιτήματος”.
-    \item Ο χρήστης κλείνει το μήνυμα.
+    \item Ο χρήστης επιλέγει να δει τη λίστα με τα αιτήματά του. 
+    \item Το σύστημα ψάχνει αν υπάρχουν αιτήματα και αν υπάρχουν εμφανίζει οθόνη με τα ήδη υπάρχοντα αιτήματά του μαζί με στοιχεία του καθενός από αυτά. 
+    \item Ο χρήστης επιλέγει να προσθέσει καινούριο αίτημα.
+    \item Ο χρήστης εισάγει τα στοιχεία του βιβλίου τα οποία θέλει να αποκτήσει, προσθέτοντας την τιμή που προτίθεται να πληρώσει. 
+    \item Το σύστημα αναζητά αν αυτό το βιβλίο υπάρχει ήδη διαθέσιμο από κάποιον άλλο χρήστη που το προσφέρει ήδη στην πλατφόρμα. 
+    \item Το σύστημα προχωράει στην καταχώρηση του αιτήματος. 
+    \item Το σύστημα τον ενημερώνει για την επιτυχή καταχώρηση του αιτήματος. 
+    \item Ο χρήστης κλείνει το αίτημα
     \item Εμφανίζεται η λίστα των αιτημάτων ανανεωμένη με το νέο αίτημα.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Ο χρήστης δεν έχει κάνει προηγούμενες αιτήσεις:}
 \begin{enumerate}
-    \item [2.1.] Το σύστημα αντιλαμβάνεται ότι o χρήστης δεν έχει κάνει καμία προηγούμενη αίτηση, οπότε εμφανίζεται μια άδεια οθόνη με μοναδική λειτουργία την προσθήκη αίτησης.
-    \item [2.2.] Η ροή συνεχίζει από το βήμα 3 της βασικής ροής.
+    \item[2.1.] Το σύστημα αντιλαμβάνεται ότι o χρήστης δεν έχει κάνει καμία προηγούμενη αίτηση, οπότε εμφανίζεται μια άδεια οθόνη με μοναδική λειτουργία την προσθήκη αίτησης.
+    \item[2.2.] Η ροή συνεχίζεται από το βήμα 3 της βασικής ροής.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 2: Ο χρήστης αφαιρεί υπάρχουσα αίτηση:}
 \begin{enumerate}
-    \item [3.α.1.] Ο χρήστης επιλέγει την επιλογή remove request για μια αίτηση του το οποίο επέλεξε.
-    \item [3.α.2.] Εμφανίζεται pop up το οποίο τον καλεί να επιβεβαιώσει την επιλογή του.
-    \item [3.α.3.] Ο χρήστης πατάει ναι.
-    \item [3.α.4.] Το request διαγράφεται.
-    \item [3.α.5.] Εμφανίζεται πάλι η οθόνη των requests.
+    \item[3.α.1] Ο χρήστης επιλέγει να διαγράψει μια αίτηση του.
+    \item[3.α.2] Το σύστημα τον καλεί να επιβεβαιώσει την επιλογή του. 
+    \item[3.α.3] Ο χρήστης επιβεβαιώνει.
+    \item[3.α.4] Το σύστημα διαγράφει το request.
+    \item[3.α.5] Εμφανίζεται πάλι η οθόνη των requests.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 3: Ο χρήστης κάνει edit υπάρχουσα αίτηση:}
 \begin{enumerate}
-    \item [3.β.1.] Ο χρήστης επιλέγει την επιλογή edit σε κάποια υπάρχουσα αίτηση.
-    \item [3.β.2.] Εμφανίζεται μια καινούργια οθόνη με τα στοιχεία της αίτησης που επέλεξε.
-    \item [3.β.3.] Επιλέγει το στοιχείο που θέλει να αλλάξει.
-    \item [3.β.4.] Εμφανίζεται ένα pop up όπου συμπληρώνει την καινούργια τιμή.
-    \item [3.β.5.] Πατάει OK.
-    \item [3.β.6.] Επιστρέφει στην οθόνη με τα στοιχεία.
-    \item [3.β.7.] Επιλέγει apply.
-    \item [3.β.8.] Επιστρέφει την οθόνη με τα requests με τα ανανεωμένα στοιχεία.
+    \item[3.β.1] Ο χρήστης επιλέγει να επεξεργαστεί κάποια υπάρχουσα αίτηση. 
+    \item[3.β.2] Το σύστημα εμφανίζει μια καινούργια οθόνη με τα στοιχεία της αίτησης που επέλεξε. 
+    \item[3.β.3] Ο χρήστης επιλέγει το στοιχείο που θέλει να αλλάξει και συμπληρώνει την καινούργια τιμή. 
+    \item[3.β.4] Επιβεβαιώνει την επιλογή του.
+    \item[3.β.5] Το σύστημα επιστρέφει το χρήστη στην οθόνη με τα στοιχεία. 
+    \item[3.β.6] Ο χρήστης οριστικοποιεί.
+    \item[3.β.7] Το σύστημα επιστρέφει την οθόνη με τα requests με τα ανανεωμένα στοιχεία.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 4: Το βιβλίο είναι ήδη διαθέσιμο προς ενοικίαση}
 \begin{enumerate}
-    \item[5.1.] Το σύστημα βρίσκει ότι βιβλίο το οποίο ο χρήστης αναζητούσε υπάρχει ήδη διαθέσιμο προς ενοικίαση από άλλον χρήστη.
-    \item[5.2.] Εμφανίζει στο χρήστη την υπάρχουσα προσφορά με τα στοιχεία της και δυνατότητα ενοικίασης.
-    \item[5.3.] Ο χρήστης επιχειρεί την ενοικίαση του βιβλίου.
-    \item[5.4.] Το σύστημα μας προχωράει με τη διαδικασία του rent.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 5: Ο χρήσης δεν νοικιάζει το ήδη διαθέσιμο προς ενοικίαση βιβλίο}
-\begin{enumerate}
-    \item [5.3.1.] Ο χρήστης απορρίπτει την ενοικίαση του βιβλίου.
-    \item [5.3.2.] Επιστρέφει στο βήμα 2 στη βασική ροή.
-\end{enumerate}
-
-\subsection{Εκπλήρωση αιτήσεων που έχουν κάνει άλλοι χρήστες}
-
-\subsubsection*{Βασική ροή <<Εκπλήρωση αιτήσεων που έχουν κάνει άλλοι χρήστες>>: Εκπλήρωση αιτήματος:}
-\begin{enumerate}
-    \item Ο χρήστης επιλέγει να δει την οθόνη με τα υπάρχοντα request από την αναζήτηση.
-    \item Το σύστημα ψάχνει για μη εκπληρωμένες αιτήσεις από άλλους χρήστες που να πληρούν τις συνθήκες αναζήτησης του χρήστη και βρίσκει ότι υπάρχουν.
-    \item Το σύστημα εμφανίζει τις αιτήσεις αυτές στον χρήστη (μαζί με στοιχεία όπως το βιβλίο που ζητείται, τον συγγραφέα, την τιμή που προτίθεται να πληρώσει ο χρήστης, τον τρόπο συναλλαγής που θέλει και το σκορ του). 
-    \item Ο αρχικός χρήστης επιλέγει να εκπληρώσει μια από τις αιτήσεις.
-    \item Το σύστημα τον καλεί να επιβεβαιώσει την απόφαση του.
-    \item Ο χρήστης επιβεβαιώνει.
-    \item Ενεργοποιείται το πρωτόκολλο διαχείρισης συναλλαγών και δημιουργείται μια νέα συναλλαγή (στην οθόνη των τρεχουσών συναλλαγών) μεταξύ του αρχικού χρήστη και του χρήστη που έκανε την αίτηση, το οποίο είναι το ίδιο με τη διαδικασία στο use case του κεφαλαίου \ref{Rental Use Case} με τη διαφορά ότι ο χρήστης που έκανε την αίτηση είναι αυτός που πρέπει να επιβεβαιώσει το αρχικό αίτημα (δεν εξηγούμε ξανά όλη την όλη διαδικασία εφόσον κατά τα άλλα είναι η ίδια).
-    \item Το σύστημα επιστρέφει το χρήστη στην οθόνη αναζήτησης requests.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 1: Το σύστημα βλέπει ότι δεν υπάρχει αίτημα που δεν είναι εκπληρωμένο:}
-\begin{enumerate}
-    \item [2.1.] Το σύστημα ψάχνει για μη εκπληρωμένες αιτήσεις από άλλους χρήστες που να πληρούν τις συνθήκες αναζήτησης του χρήστη και βρίσκει ότι δεν υπάρχουν.
-    \item [2.2.] Το σύστημα ενημερώνει κατάλληλα τον χρήστη και του προτείνει να κάνει άλλη αναζήτηση.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης ακυρώνει την εκπλήρωση της αίτησης στο βήμα επιβεβαίωσης:}
-\begin{enumerate}
-    \item [6.1.] Ο χρήστης ακυρώνει την εξυπηρέτηση του request.
-    \item [6.2.] To σύστημα επιστρέφει στην οθόνη requests.
+    \item[5.1] Το σύστημα βρίσκει ότι βιβλίο το οποίο ο χρήστης αναζητούσε υπάρχει ήδη διαθέσιμο προς ενοικίαση από άλλον χρήστη και του εμφανίζει την υπάρχουσα προσφορά με τα στοιχεία της και δυνατότητα ενοικίασης. 
+    \item[5.3] Ο χρήστης επιχειρεί την ενοικίαση του βιβλίου. 
+    \item[5.4] Το σύστημα μας προχωράει με τη διαδικασία του rent.
 \end{enumerate}
 
 \subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
 
 \subsubsection*{Βασική ροή <<Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής>>: Προσθήκη νέας αξιολόγησης με το προαιρετικό σχόλιο}
 \begin{enumerate}
-    \item Ο χρήστης επιλέγει μια ολοκληρωμένη συναλλαγή από το ιστορικό του, και διαλέγει να αξιολογήσει τον χρήστη με τον οποίο έκανε τη συναλλαγή.
-    \item Εμφανίζεται μια επιλογή για αξιολόγηση της μορφής 1-5 αστεριών, μαζί με προαιρετική προσθήκη σχολίου με μήκος μέχρι 280 χαρακτήρες.
-    \item Ο χρήστης συμπληρώνει την επιλογή για τα αστεράκια και προσθέτει και το προαιρετικό σχόλιο.
-    \item Το σύστημα ελέγχει το μήκος του σχολίου και δεν επιτρέπει τον χρήστη να καταχωρήσει την αξιολόγησή του αν περνάει το μέγιστο επιτρεπτό μήκος.
-    \item Ο χρήστης επιλέγει καταχωρήσει την αξιολόγησή του, έχοντας συμπληρώσει σχόλιο που τηρεί τον κανόνα μέγιστου μήκους.
-    \item Το σύστημα ρωτάει τον χρήστη αν είναι σίγουρος πως θέλει να καταχωρήσει την αξιολόγησή του.
-    \item Ο χρήστης επιβεβαιώνει την πρόθεσή του.
-    \item Το σύστημα αποθηκεύει την αξιολόγηση.
-    \item Εμφανίζεται μήνυμα που ενημερώνει τον χρήστη για την επιτυχία καταχώρησης της αξιολόγησης.
+    \item Από την οθόνη του ιστορικού συναλλαγών ο χρήστης επιλέγει μια συναλλαγή και διαλέγει να αξιολογήσει τον χρήστη με τον οποίο έκανε τη συναλλαγή. 
+    \item Το σύστημα εμφανίζει μια επιλογή για αξιολόγηση της μορφής 1-5 αστεριών, μαζί με προαιρετική προσθήκη σχολίου. 
+    \item Ο χρήστης επιλέγει να κάνει αξιολόγηση μόνο με βάση τα αστεράκια. 
+    \item Το σύστημα εμφανίζει την επιλογή αξιολόγησης 1-5 (αστέρια). 
+    \item Ο χρήστης κάνει την επιλογή του και επιβεβαιώνει.
+    \item Το σύστημα αποθηκεύει την αξιολόγηση και ενημερώνει τον χρήστη για την επιτυχία της ενέργειάς του.
+    \item Το σύστημα επιστρέφει τον χρήστη στην οθόνη του ιστορικού.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Ο χρήστης κάνει αξιολόγηση χωρίς το προαιρετικό σχόλιο}
 \begin{enumerate}
-    \item [3.1.] Ο χρήστης συμπληρώνει την επιλογή για τα αστεράκια.
-    \item [3.3.] Ο χρήστης καταχωρεί την αξιολόγησή του.
-    \item [3.4.] Επιστροφή στο βήμα 6 της βασικής ροής.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης ακυρώνει την διαδικασία της αξιολόγησης}
-\begin{enumerate}
-    \item [7.1.] Ο χρήστης πατάει ακύρωση.
-    \item [7.2.] Εμφανίζεται μήνυμα ακύρωσης αξιολόγησης.
+    \item[3.1] Ο χρήστης επιλέγει γραπτή αξιολόγηση μαζί με το προαιρετικό σχόλιο. 
+    \item[3.2] Το σύστημα εμφανίζει επιλογή αξιολόγησης 1-5 (αστέρια), μαζί με ένα text field για το σχόλιο. 
+    \item[3.3] Ο χρήστης συμπληρώνει το σχόλιο και τα αστεράκια και επιβεβαιώνει
+    \item[3.4] Επιστροφή στο βήμα 6 της βασικής ροής.
 \end{enumerate}
 
 \subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
