--- a/3ο Παραδοτέο/Robustness-Diagrams/Files/Robustness-diagrams-v0.1.tex
+++ b/3ο Παραδοτέο/Robustness-Diagrams/Files/Robustness-diagrams-v0.1.tex
@@ -76,7 +76,7 @@
 
 \subsection{Επεξεργασία χρηματικού υπολοίπου χρήστη}
 \begin{figure}[H]
-	\includegraphics[width=\textwidth]{View and Edit User Account Details Robustness.png}
+	\includegraphics[width=\textwidth]{Edit User Balance Robustness.png}
 	\caption{Robustness Diagram: Επεξεργασία χρηματικού υπολοίπου χρήστη}
 	\label{Robustness Diagram: Επεξεργασία χρηματικού υπολοίπου χρήστη}
 \end{figure}
