Added Xristo's Robustness, should be ready for 3rd deliverable

--- a/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.2/Files/Use-cases-v0.2.tex
@@ -395,9 +395,8 @@
 
 \subsubsection*{Εναλλακτική ροή 4: Το βιβλίο είναι ήδη διαθέσιμο προς ενοικίαση}
 \begin{enumerate}
-    \item[5.1] Το σύστημα βρίσκει ότι βιβλίο το οποίο ο χρήστης αναζητούσε υπάρχει ήδη διαθέσιμο προς ενοικίαση από άλλον χρήστη και του εμφανίζει την υπάρχουσα προσφορά με τα στοιχεία της και δυνατότητα ενοικίασης. 
-    \item[5.3] Ο χρήστης επιχειρεί την ενοικίαση του βιβλίου. 
-    \item[5.4] Το σύστημα μας προχωράει με τη διαδικασία του rent.
+    \item[5.1] Το σύστημα βρίσκει ότι βιβλίο το οποίο ο χρήστης αναζητούσε υπάρχει ήδη διαθέσιμο προς ενοικίαση από άλλον χρήστη και 
+    \item[5.2] Το σύστημα εμφανίζει στον χρήστη την υπάρχουσα προσφορά με τα στοιχεία της και δυνατότητα ενοικίασης του, αν αυτός επιθυμεί.
 \end{enumerate}
 
 \subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
@@ -604,10 +603,10 @@
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
-	\item \textbf{Γρηγόρης Καπαδούκας:} Author (Κεφαλαίων 1, 2.1, 2.2, 2.3), Editor, Peer Reviewer
-	\item \textbf{Χρήστος Μπεστητζάνος:} Author (Κεφαλαίων 2.5, 2.6, 2.7)
-   	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 2.8, 2.9, 2.10)
-	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 2.4, 2.11)
+	\item \textbf{Γρηγόρης Καπαδούκας:} Author (Κεφαλαίων 1, 2.1, 2.2, 2.3), Editor Όλων, Reviewer Όλων
+	\item \textbf{Χρήστος Μπεστητζάνος:} Author (Κεφαλαίων 2.5, 2.6)
+   	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 2.7, 2.8, 2.9)
+	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 2.4, 2.10)
 \end{enumerate}
 
 \end{document}
