--- a/3ο Παραδοτέο/Robustness-Diagrams/Files/Robustness-diagrams-v0.1.tex
+++ b/3ο Παραδοτέο/Robustness-Diagrams/Files/Robustness-diagrams-v0.1.tex
@@ -67,6 +67,21 @@
 	\label{Robustness Diagram: Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
 \end{figure}
 
+\subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{Manage User Requests Robustness.png}
+	\caption{Robustness Diagram: Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
+	\label{Robustness Diagram: Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
+\end{figure}
+
+\subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
+\begin{figure}[H]
+	\includegraphics[width=\textwidth]{Review after Transaction Robustness.png}
+	\caption{Robustness Diagram: Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
+	\label{Robustness Diagram: Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
+\end{figure}
+
+
 \subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{View and Edit User Account Details Robustness.png}
@@ -94,5 +109,13 @@
 	\caption{Robustness Diagram: Προβολή ιστορικού συναλλαγών και στατιστικών}
 	\label{Robustness Diagram: Προβολή ιστορικού συναλλαγών και στατιστικών}
 \end{figure}
+
+\section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
+\begin{enumerate}
+	\item \textbf{Γρηγόρης Καπαδούκας:} Author (Κεφαλαίων 1, 2.1, 2.2, 2.3), Editor Όλων, Reviewer Όλων
+	\item \textbf{Χρήστος Μπεστητζάνος:} Author (Κεφαλαίων 2.5, 2.6)
+   	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 2.7, 2.8, 2.9)
+	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 2.4, 2.10)
+\end{enumerate}
 
 \end{document}
