Small typo corrections

--- a/2ο Παραδοτέο/Use-Cases/v0.3/Files/Use-cases-v0.3.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.3/Files/Use-cases-v0.3.tex
@@ -188,14 +188,14 @@
     \item Το σύστημα σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας". Επίσης μετατρέπει την κατάσταση της συναλλαγής σε ολοκληρωμένη.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
+\subsubsection*{Εναλλακτική Ροή 1: Η συναλλαγή απορρίπτεται από τον ενοικιαστή}
 \begin{enumerate}
-    \item[4.1.] Το σύστημα παρατηρεί ότι η προσφορά ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
-    \item[4.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι η αίτησή του απορρίφθηκε από τον ιδιοκτήτη.
+    \item[4.1.] Το σύστημα παρατηρεί ότι η προσφορά εκπλήρωσης αίτησης απορρίπτεται από τον ενοικιαστή.
+    \item[4.2.] Ο ιδιοκτήτης ενημερώνεται από το σύστημα ότι η προσφορά του απορρίφθηκε από τον ενοικιαστή.
     \item[4.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Τέλος χρημάτων ενοικιαστή}
+\subsubsection*{Εναλλακτική Ροή 2: Τέλος χρημάτων ενοικιαστή}
 \begin{enumerate}
     \item[8.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
     \item[8.2.] Το σύστημα αποδεσμεύει το "ποσό ασφαλείας" και το στέλνει στον ιδιοκτήτη.
@@ -233,7 +233,7 @@
     \item [4.α.5.] Το σύστημα ενημερώνει τον χρήστη ότι οι αλλαγές έγιναν με επιτυχία.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης επιλέγει να αλλάξει την ποσότητα για ένα βιβλίο με προηγούμενη ποσότητα μηδέν:}
+\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιλέγει να αλλάξει την ποσότητα για ένα βιβλίο με προηγούμενη ποσότητα μηδέν:}
 \begin{enumerate}
     \item [4.β.1.] Ο χρήστης επιλέγει να αλλάξει τις πληροφορίες για κάποιο από τα βιβλία που προσφέρει.
     \item [4.β.2.] Ο χρήστης επιλέγει το βιβλίο των οποίων τις πληροφορίες θέλει να αλλάξει.
@@ -245,7 +245,7 @@
     \item [4.β.6.] Το σύστημα ενημερώνει τον χρήστη ότι οι αλλαγές έγιναν με επιτυχία.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση:}
+\subsubsection*{Εναλλακτική ροή 4: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση:}
 \begin{enumerate}
     \item [4.γ.1.] Ο χρήστης επιλέγει να αλλάξει διαγράψει ένα βιβλίο από τη λίστα αυτών που προσφέρει.
     \item [4.γ.2.] Ο χρήστης επιλέγει το βιβλίο που θέλει να διαγράψει.
@@ -255,7 +255,7 @@
     \item [4.γ.6.] Το σύστημα ενημερώνει τον χρήστη για την επιτυχή διαγραφή.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 4: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση, αλλά δεν επιβεβαιώνει:}
+\subsubsection*{Εναλλακτική ροή 5: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση, αλλά δεν επιβεβαιώνει:}
 \begin{enumerate}
     \item [4.δ.1.] Ο χρήστης επιλέγει να αλλάξει διαγράψει ένα βιβλίο από τη λίστα αυτών που προσφέρει.
     \item [4.δ.2.] Ο χρήστης επιλέγει το βιβλίο που θέλει να διαγράψει.
